Q16/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ckad0021
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
