Q16/np1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ckad0021-newpod-netpol-allow
  namespace: ckad0021
spec:
  podSelector:
    matchLabels:
      allow-access: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: secure-app
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: secure-app
