Q16/np3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: ckad0021
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
