Q16/np4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-storage-internal-netpol
  namespace: ckad0021
spec:
  podSelector:
    matchLabels:
      app: secure-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: secure-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: secure-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-storage-external-netpol
  namespace: ckad0021
spec:
  podSelector:
    matchLabels:
      app: secure-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allow-access: "true"
  egress:
  - to:
    - podSelector:
        matchLabels:
          allow-access: "true"
